# NKU-cpp-FinalProject

./: .gitignore.txt  Bomb.cpp  Bomb.h  CMakeLists.txt  GameScene.cpp  GameScene.h  Monster.cpp  Monster.h  PacMan.cpp  PacMan.h  Player.cpp  Player.h  README.md  game_constants.h  image.qrc  main.cpp  resource.qrc  项目报告.docx
